force-app/main/default/objects/Account/fields/Area_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Area_Sqft__c</fullName>
    <label>Area (Sqft)</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>