force-app/main/default/objects/Account/fields/Is_Published__c.field-meta.xml
<CustomField>
    <fullName>Is_Published__c</fullName>
    <label>Is Published</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>When checked, this Property is publicly visible on the website. A Flow validates required fields are complete before allowing this to stay checked.</description>
</CustomField>