force-app/main/default/objects/Account/fields/Listing_Type__c.field-meta.xml
<CustomField>
    <fullName>Listing_Type__c</fullName>
    <label>Listing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>