force-app/main/default/objects/Account/fields/Property_Image_Preview__c.field-meta.xml
<CustomField>
    <fullName>Property_Image_Preview__c</fullName>
    <label>Property Image Preview</label>
    <type>Text</type>
    <formula>IMAGE(Property_Image_URL__c , &quot;Property Photo&quot;, 200, 300)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
</CustomField>