force-app/main/default/objects/Account/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Farmhouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>