force-app/main/default/objects/Account/recordTypes/Property.recordType-meta.xml
<RecordType>
    <fullName>Property</fullName>
    <label>Property</label>
    <active>true</active>
</RecordType>